# litestar-jwk-demo

./: LICENSE  README.md
src/backend/: .env  README.md  app.py  auth_jwk.py  auth_middleware.py  pyproject.toml
src/frontend/zitadel-app/: .env  README.md  bun.lockb  package-lock.json  package.json
src/frontend/zitadel-app/src/: App.js  Login.js  authConfig.js
